--- a/src/Screens/People/People.scss
+++ b/src/Screens/People/People.scss
@@ -2,65 +2,31 @@
 @import "../../Utils/ColorVariables.scss";
 
 .People {
-  padding-left: 100px !important;
-  padding-right: 100px !important;
+  display: flex !important;
+  flex-direction: row !important;
+  padding: 24px !important;
+  border-radius: 10px;
+  height: 100%;
+  gap: 10px;
 
-  .TitleContainer {
-    margin-top: 30px !important;
-
-    .Title {
-      font-size: 24px !important;
-      font-weight: 200 !important;
-      text-align: left;
-    }
+  .Title {
+    @extend .Titles;
+    font-size: 24px;
   }
 
-  .BodyAndFilters {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    .BodyContainer {
-      width: 60%;
-
-      .Category {
-        margin-bottom: 20px;
-
-        .CategoryTitleContainer {
-          text-align: left;
-          margin-top: 30px !important;
-          .CategoryTitle {
-            font-size: 20px !important;
-            font-weight: bold !important;
-          }
-        }
-
-        .CardHorizontalList {
-          position: relative;
-          overflow-x: auto;
-          overflow-y: hidden;
-          display: flex;
-          flex-direction: column;
-          flex-wrap: wrap;
-          max-height: 700px;
-          width: 100%;
-          white-space: nowrap;
-          // border: 1px solid rgba(255, 255, 255, 0.15);
-          // border-radius: 5px;
-
-          .CardContainer {
-            display: inline-block;
-            vertical-align: top;
-            margin: 10px 10px;
-            width: 250px;
-          }
-        }
-      }
-    }
-    .FiltersContainer {
-      width: 35%;
-      padding-top: 100px;
-    }
-  }
 }
 
+.People-Theme_01 {
+  @extend .People;
+  @extend .ComponentSurface-Theme_01;
+}
+
+.People-Theme_02 {
+  @extend .People;
+  @extend .ComponentSurface-Theme_02;
+}
+
+.People-Theme_03 {
+  @extend .People;
+  @extend .ComponentSurface-Theme_03;
+}
