--- a/src/Screens/Learning/LearningArticleWrite/LearningArticleWrite.scss
+++ b/src/Screens/Learning/LearningArticleWrite/LearningArticleWrite.scss
@@ -134,12 +134,13 @@
 .LearningArticleWriteScreen-Theme_01 {
   @extend .LearningArticleWriteScreen;
 
-  .ArticleInfoContainer, .ActionButtons {
+  .ArticleInfoContainer,
+  .ActionButtons {
     @extend .ComponentSurface-Theme_01;
   }
 
   .ArticlePreviewTitle {
-    color: white;
+    @extend .TextColor-Theme_01;
   }
 
   .EditPreviewContainer {
@@ -150,11 +151,11 @@
     }
     .MarkdownInput,
     .MarkdownPreview {
-      color: white;
+      @extend .TextColor-Theme_01;
       pre {
         background: linear-gradient(-45deg, #949494, #7a7a7a);
         code {
-          color: white !important;
+          @extend .TextColor-Theme_01;
         }
       }
     }
@@ -182,28 +183,27 @@
 
   .ArticleInfoContainer,
   .ActionButtons {
-    border: 1px solid rgba(#969696, 1);
-    background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
+    @extend .ComponentSurface-Theme_02;
   }
 
   .ArticlePreviewTitle {
-    color: #2c2d36;
+    @extend .TextColor-Theme_02;
   }
 
   .EditPreviewContainer {
     border: 1px solid rgba(#969696, 1);
     background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
     .Title {
+      @extend .TextColor-Theme_02;
       text-shadow: 0 0 3px #c3cfe2;
-      color: #323236;
     }
     .MarkdownInput,
     .MarkdownPreview {
-      color: #323236;
+      @extend .TextColor-Theme_02;
       pre {
         background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
         code {
-          color: #323236 !important;
+          @extend .TextColor-Theme_02;
         }
       }
     }
@@ -229,26 +229,28 @@
 .LearningArticleWriteScreen-Theme_03 {
   @extend .LearningArticleWriteScreen;
 
-  .ArticleInfoContainer, .ActionButtons {
+  .ArticleInfoContainer,
+  .ActionButtons {
     @extend .ComponentSurface-Theme_03;
   }
 
   .ArticlePreviewTitle {
-    color: white;
+    @extend .TextColor-Theme_03;
   }
 
   .EditPreviewContainer {
     @extend .ComponentSurface-Theme_03;
     .Title {
-      color: white;
+      @extend .TextColor-Theme_03;
     }
     .MarkdownInput,
     .MarkdownPreview {
-      color: white;
+      @extend .TextColor-Theme_03;
       pre {
         background-image: linear-gradient(-45deg, #8ec5fc, #e0c3fc);
         code {
-          color: white !important;
+          @extend .TextColor-Theme_03;
+          text-shadow: 0 0 2px #323236;
         }
       }
     }
