--- a/src/Screens/Home/Home.scss
+++ b/src/Screens/Home/Home.scss
@@ -147,7 +147,7 @@
     color: white;
   }
   .NoEventText, .NoEventIcon {
-    color: #979aa5;
+    color: #c0c0c7aa;
   }
   .CreateButton {
     @extend .GenericButton-Theme_03;
