--- a/src/Components/Menu/Menu.scss
+++ b/src/Components/Menu/Menu.scss
@@ -9,11 +9,12 @@ $duration: 0.5s;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: calc(100vh - 100px);
   border-radius: 10px;
   transition: all 1s;
   position: sticky;
   top: calc(8vh + 15px);
+  min-height: calc(100vh - 100px);
+  height: auto;
 
   .MenuButtons {
     display: flex;
