--- a/src/Components/Menu/Menu.scss
+++ b/src/Components/Menu/Menu.scss
@@ -12,9 +12,8 @@ $duration: 0.5s;
   border-radius: 10px;
   transition: all 1s;
   position: sticky;
-  top: calc(8vh + 15px);
-  min-height: calc(100vh - 100px);
-  height: auto;
+  top: 90px; // Height of header + padding
+  height: calc(100vh - 100px);
 
   .MenuButtons {
     display: flex;
