Fixes on home and event cards

--- a/src/Screens/Home/Home.scss
+++ b/src/Screens/Home/Home.scss
@@ -57,6 +57,9 @@
   }
 
   .EventList {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     .NoEventsContainer {
       display: flex;
       margin: 20px 0;
