--- a/src/Components/EventCard/EventCard.scss
+++ b/src/Components/EventCard/EventCard.scss
@@ -58,6 +58,7 @@
     padding: 10px;
     min-width: min(1000px, 35vw);
     height: 142px;
+    width: 100%;
 
     .EventInfoContainer {
       display: flex;
@@ -153,7 +154,8 @@
   .EventTitle,
   .EventDesc,
   .SocialMediaButton,
-  .EventButton {
+  .EventButton,
+  .UserPhoto {
     @extend .TextColor-Theme_01;
   }
 }
@@ -175,7 +177,8 @@
   .EventTitle,
   .EventDesc,
   .SocialMediaButton,
-  .EventButton {
+  .EventButton,
+  .UserPhoto {
     @extend .TextColor-Theme_02;
   }
 }
@@ -197,7 +200,8 @@
   .EventTitle,
   .EventDesc,
   .SocialMediaButton,
-  .EventButton {
+  .EventButton,
+  .UserPhoto {
     @extend .TextColor-Theme_03;
   }
 }
